k8s/media-services/whisparr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whisparr
  namespace: media-services
  labels:
    app: whisparr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: whisparr
